--- a/client-mobx/package.json
+++ b/client-mobx/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^7.0.0",
     "axios": "^0.19.2",
+    "final-form": "^4.18.7",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-final-form": "^6.3.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "semantic-ui-react": "^0.88.2",
