--- a/client-mobx/package.json
+++ b/client-mobx/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^7.0.0",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-alpha.13",
     "final-form": "^4.18.7",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^1.5.2",
@@ -21,6 +22,8 @@
     "react-final-form": "^6.3.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-widgets": "^4.4.11",
+    "react-widgets-date-fns": "^4.0.26",
     "semantic-ui-react": "^0.88.2",
     "typescript": "~3.7.2"
   },
