--- a/client-mobx/package.json
+++ b/client-mobx/package.json
@@ -24,6 +24,7 @@
     "react-final-form": "^6.3.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-toastify": "^5.5.0",
     "react-widgets": "^4.4.11",
     "react-widgets-date-fns": "^4.0.26",
     "revalidate": "^1.2.0",
